spec/e2e/function/missing_comma_in_parameters.lit
# error: [line 2] Syntax error at "c": I was expecting a '|' after the parameters.
fn foo { |a, b c, d, e, f| }
